fix(console): prevent virtual host overflow
(cherry picked from commit 97c52c60ba7ed056b207e1e4d47d460515a3048b)

--- a/gravitee-apim-console-webui/src/management/api/component/gio-form-listeners/gio-form-listeners-virtual-host/gio-form-listeners-virtual-host.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/component/gio-form-listeners/gio-form-listeners-virtual-host/gio-form-listeners-virtual-host.component.scss
@@ -6,4 +6,14 @@
     display: table-cell;
     width: 220px;
   }
+
+  &__field {
+    &__host {
+      display: inline-block;
+      max-width: 200px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+  }
 }
